--- a/fps/index.css
+++ b/fps/index.css
@@ -1,4 +1,4 @@
-ody {
+body {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     line-height: 150%;
@@ -7,7 +7,10 @@ ody {
     overflow: hidden !important;
 }
 
-
+.no-padding-left {
+    min-height: 100vh !important;
+    padding-left: 0px !important;
+}
 /* NOTE: Container */
 .fps-container {
     background-color: white;
@@ -577,10 +580,6 @@ i.fa.fa-bell.fa-stack-1x:hover  {
     font-family: 'Poppins', sans-serif;
     word-spacing: 120%;
     letter-spacing: 0px;
-}
-.no-padding-left {
-    padding-left: 0px !important;
-    min-height: unset !important;
 }
 
 /* NOTE: SCROLL BAR & PLAYOUT */
