--- a/fps/material-form.css
+++ b/fps/material-form.css
@@ -175,3 +175,77 @@ span.select2-dropdown.select2-dropdown--below {
 
 
 
+/* check box and radio */
+.my-controls {
+    display: none;
+}
+.chk-container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .chk-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 4px !important;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .chk-container:hover input ~ .checkmark {
+    background-color: #ccc;
+    border-radius: 4px !important;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .chk-container input:checked ~ .checkmark {
+    background-color: #18A5A5;
+    border-radius: 4px !important;
+    border: 1px solid #18A5A5;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .chk-container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .chk-container .checkmark:after {
+    left: 8px;
+    top: 3px;
+    width: 8px;
+    height: 14px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
