--- a/fps/index.css
+++ b/fps/index.css
@@ -59,6 +59,20 @@ table * {
 .breadcrumbs a {
     text-transform: capitalize;
 }
+.forgotPass {
+    display: flex;
+}
+.forgotPass p {
+    margin-left: auto;
+    margin-right: auto;
+}
+.forgotPass a {
+    color: #18A5A5 !important;
+}
+.forgotPass a:hover{
+    color: #18A5A5 !important;
+    text-decoration: underline;
+}
 
 .menuliparent,
 .list-group-item a,
@@ -337,6 +351,7 @@ a.nav.navbar-nav{
 .navbar-form .input-group-btn {
     width: 60px !important;
 }
+.submitBtnCustom,
 .navbar-form .input-group-btn .btn.btn-default{
     margin: 0px;
     padding: 16px !important;
@@ -382,7 +397,7 @@ input,
     padding: 16px 20px !important;
     display: flex;
 }
-
+.submitBtnCustom,
 .dropdown .toggle,
 .btn.btn-top-greenbg,
 .dropdown.nav.navbar-nav .btn {
@@ -519,9 +534,11 @@ i.glyphicon.glyphicon-search {
     border-radius: 16px;
 }
 /* hover */
+.submitBtnCustom:hover,
 .nav.navbar-nav.navbar-right .btn:hover,
 .submitButtonRight .btn:hover {
     background-color: rgba(18, 128, 128) !important;
+    text-decoration: none;
 }
 .closediv:hover .badge {
     background-color: rgba(18, 128, 128) !important;
@@ -831,7 +848,6 @@ ul.dropdown-menu.pull-right li a {
     background-color: #F0F0F0;
 
 }
-
 #login #loginBox{
     width: 502px !important;
     padding: 56px 40px 40px 40px !important;
@@ -842,50 +858,16 @@ ul.dropdown-menu.pull-right li a {
 #login #loginBox form{
     padding-top: 45px;
 }
-
-.loginForm input[type="password"]{
-    border-radius: 8px !important;
-}
-.loginForm .submitBtn{
-    margin: 24px 0px !important;
-    background-color: #18A5A5 !important;
-    height: 56px;
-}
-.loginForm .submitBtn:hover{
-    background-color: #18A5A5 !important;
-}
-.logoSmall {
-    background: url(logofps.png) no-repeat;
-    background-position: center top !important;
-    background-size: 100% auto !important;
-    width: 250px;
-    height: 70px;
-    display: block;
-    position: relative;
-    margin: 0 auto 20px;
-}
-.form-field__control input{
-    min-height: 30px !important;
-}
-.no-border.bg-transparent.form-field .form-field__control {
-    height: 56px;
-}
-label.form-field__label {
+h2.name {
     text-align: left;
 }
-.no-border.bg-transparent.form-field .form-field__control .form-field__label {
-    padding-top: 17px !important;
+#loginBox {
+    text-align: unset !important;
 }
-/* fogotpasswork */
-.loginForm form input {
-    box-shadow: inset 0px -2px 0px -1px #eee;
+#loginBox a {
+    display: flex;
 }
-
-#loginBox .loginForm input {
-    margin-bottom: 8px !important;
+#loginBox a #logofps{
+    margin-left: auto;
+    margin-right: auto;
 }
-
-.tablesorter.tablesorter-default.hasFilters th{
-    padding-left: 10px !important;
-}
-
