--- a/fps/index.css
+++ b/fps/index.css
@@ -871,3 +871,6 @@ h2.name {
     margin-left: auto;
     margin-right: auto;
 }
+.submitBtn.submitBtnCustom  {
+    margin-top: 40px !important;
+}
